<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battleships!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intermediate">IntermediateActivity</string>
    <string name="app_author">Bradley Page (i7709331)</string>
    <string name="title_activity_ship_placement">SHip Placement</string>
    <string name="ship1">Carrier (5)</string>
    <string name="ship2">Battleship (4)</string>
    <string name="ship3">Cruiser (3)</string>
    <string name="ship4">Submarine (3)</string>
    <string name="ship5">Destroyer (2)</string>
    <string name="battleshipsRemaining"></string>
    <string name="battleships_remaining">5 Battleships to place</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="playGame">Play Game</string>
    <string name="dialog_won_game">You won the game!</string>
    <string name="restart">Restart Game</string>
    <string name="title_activity_start_menu">Menu</string>
    <string name="against_computer">Vs. Computer</string>
    <string name="against_human">Vs. Human</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="help">Help</string>
    <string name="close">Exit Game</string>
    <string name="title_activity_score">High Scores</string>
    <string name="players_ships">These are your ship placements</string>
    <string name="score_title">High Scores</string>
    <string name="position_1">"1. "</string>
    <string name="position_2">"2. "</string>
    <string name="position_3">"3. "</string>
    <string name="position_4">"4. "</string>
    <string name="position_5">"5. "</string>
    <string name="position_6">"6. "</string>
    <string name="position_7">"7. "</string>
    <string name="position_8">"8. "</string>
    <string name="position_9">"9. "</string>
    <string name="position_10">"10. "</string>
    <string name="reset_scores">Reset Scores</string>

</resources>
